unpackaged/main/default/objects/AcctSeed__Accounting_Period__c/fields/AcctSeed__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Start_Date__c</fullName>
    <inlineHelpText>Accounting periods are typically used as months. This denotes the beginning of the period. Fiscal Months are supported. A period beginning date can not cross over into the start and end date range of another period.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>