unpackaged/main/default/objects/AcctSeed__Accounting_Period__c/fields/Prior_Period__c.field-meta.xml
<CustomField>
    <fullName>Prior_Period__c</fullName>
    <formula>If( right(Name ,2)="01",text(year( AcctSeed__Start_Date__c )-1)+"-12",
text(year(AcctSeed__Start_Date__c))+"-"+if((Month(AcctSeed__Start_Date__c)-1)&lt;10,"0"+text(Month(AcctSeed__Start_Date__c)-1),text(Month(AcctSeed__Start_Date__c)-1)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Period</label>
    <type>Text</type>
</CustomField>