unpackaged/main/default/objects/AcctSeed__Accounting_Period__c/fields/Starting_Period_Conga__c.field-meta.xml
<CustomField>
    <fullName>Starting_Period_Conga__c</fullName>
    <formula>left( Name ,4)+"-01"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Starting Period (Conga)</label>
    <type>Text</type>
</CustomField>