unpackaged/main/default/objects/AcctSeed__Accounting_Period__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <formula>left( Name ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>year</label>
    <type>Text</type>
</CustomField>