unpackaged/main/default/objects/AcctSeed__Accounting_Period__c/validationRules/AcctSeed__YYYY_MM_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__YYYY_MM_Format</fullName>
    <active>false</active>
    <description>Accounting Periods must be in numerical format YYYY-MM</description>
    <errorConditionFormula>ISBLANK(Name) || !(REGEX(Name, "^(1|2)[0-9]{3}-(0[1-9]|1[012])$"))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Accounting Periods must be in the format YYYY-MM and must be numerical values.</errorMessage>
</ValidationRule>