unpackaged/main/default/objects/AcctSeed__Accounting_Period__c/listViews/Accounting_Periods_Open.listView-meta.xml
<ListView>
    <fullName>Accounting_Periods_Open</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Start_Date__c</columns>
    <columns>AcctSeed__End_Date__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Accounting Periods - Open</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>